--- a/README.Rmd
+++ b/README.Rmd
@@ -84,6 +84,12 @@ resp %>% resp_body_html()
 
 ## Major differences to httr
 
+-   You can now create and modify a request without performing it.
+    This means that there's now a single function to perform and request and fetch the result: `req_fetch()`.
+    (If you want to handle the response as it streams in, instead use `req_stream()`).
+    This replaces `httr::GET()`, `POST()`, `DELETE()`, `VERB()`, ....
+    You can preview a request without sending it with `req_dry_run()`.
+
 -   HTTP errors are automatically converted into R errors.
     Use `req_error()` to override the defaults (which turn all 4xx and 5xx responses into errors) or to add additional details to the error message.
 
