--- a/vignettes/wrapping-apis.Rmd
+++ b/vignettes/wrapping-apis.Rmd
@@ -133,7 +133,7 @@ I'd suggest keeping that code in a separate function since it's likely to vary b
 
 ### User agent
 
-Before we go on, Polite to set a user agent --- [<https://github.com/r-lib/httr2/issues/43>](https://github.com/r-lib/httr2/issues/43){.uri}.
+Before we go on, Polite to set a user agent --- <https://github.com/r-lib/httr2/issues/43>.
 
 ## App with API key
 
